tests/errors/nativeptr_err/nativeptr_err.c
#error nativeptr_err.nativeptr_err:8:21 Expected a pointer type but was: unit
#error nativeptr_err.nativeptr_err:9:27 Expected a pointer type but was: unativeint
#error nativeptr_err.nativeptr_err:10:20 Expected a pointer type but was: obj
#error nativeptr_err.nativeptr_err:11:25 Expected a pointer type but was: int list
#error nativeptr_err.nativeptr_err:16:24 Expected two different pointer types but: one was unativeint, the other: voidptr
#error nativeptr_err.nativeptr_err:17:27 Expected two different pointer types but: one was nativeptr<int>, the other: unativeint
#error nativeptr_err.nativeptr_err:20:30 Expected two different pointer types but: one was nativeptr<'T>, the other: nativeptr<'T>
#error nativeptr_err.nativeptr_err:23:7 This linear variable is not used.
#error nativeptr_err.nativeptr_err:23:38 Expected two different pointer types but: one was voidptr, the other: Linear<nativeptr<'T>>
#error nativeptr_err.nativeptr_err:24:30 Expected two different pointer types but: one was Linear<voidptr>, the other: nativeptr<'T>
#error nativeptr_err.nativeptr_err:24:40 Expected a pointer type but was: Linear<voidptr>
#error nativeptr_err.nativeptr_err:28:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:29:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:32:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:34:3 Type mismatch: '__voidinptr' <> 'uint8'.
#error nativeptr_err.nativeptr_err:35:3 Type mismatch: '__voidinptr' <> 'unit'.
#error nativeptr_err.nativeptr_err:39:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:40:15 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:44:9 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:53:14 Type mismatch: 'nativeptr<int>' <> 'int'.
#error nativeptr_err.nativeptr_err:54:14 Type mismatch: '__inptr<int>' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:55:14 Type mismatch: 'voidptr' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:64:11 Expected a variable.
#error nativeptr_err.nativeptr_err:67:11 Expected a variable.
#error nativeptr_err.nativeptr_err:71:22 Expected pointer type.
#error nativeptr_err.nativeptr_err:73:24 Expected pointer type.
#error nativeptr_err.nativeptr_err:79:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:80:20 Expected pointer type.
#error nativeptr_err.nativeptr_err:81:25 Expected nativeptr but was __outptr.
#error nativeptr_err.nativeptr_err:86:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:87:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:88:26 Expected nativeptr but was __inptr.
